--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,6 +9,7 @@
   background-color: cornflowerblue;
   width: -webkit-fill-available;
   position: fixed;
+  border-radius: 0px 0px 30px 30px;
 }
 
 .navbar a {
@@ -29,6 +30,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  border-radius: 0px 0px 130px 130px;
 }
 
 .links {
